--- a/templates/all_mods.html
+++ b/templates/all_mods.html
@@ -1,16 +1,8 @@
-{% extends "main/base.html" %}
-{% load static %}
-{% load i18n %}
 
-{% block title %}{% trans "Все моды" %}{% endblock %}
-{% block stylesheet %}
 <link type="text/css" href="{% static 'main/css/main.css'%}" rel="stylesheet" />
 <link type="text/css" href="{% static 'main/css/base.css'%}" rel="stylesheet" />
 <link type="text/css" href="{% static 'main/css/all_mods.css'%}" rel="stylesheet"/>
 <link type="text/css" href="{% static 'main/css/paginator.css'%}" rel="stylesheet"/>
-{% endblock %}
-
-{% block content %}
 <br><br><br>
 <div class="container" style="max-width:1050px">
     <div class="row">
@@ -42,41 +34,35 @@
         <!-- Блок фильтров (4 колонки) -->
         <div class="col-md-4 order-md-2">
             <div class="filter-block" style="background: #f8f9fa; padding: 20px; border-radius: 5px; position: sticky; top: 70px;">
-                <h4 class="text-black">{% trans "Фильтры" %}</h4>
+                <h4 class="text-black">Фильтры</h4>
                 <form method="get" action="">
                     <div class="mb-3">
-                        <label class="form-label text-black">{% trans "Поиск" %}</label>
+                        <label class="form-label text-black">Поиск</label>
                         <input type="text" name="search" class="form-control" placeholder="{% trans 'Введите запрос...' %}" value="{{ search_query }}">
                     </div>
                     <div class="mb-3">
-                        <label class="form-label text-black">{% trans "Сортировать по" %}</label>
+                        <label class="form-label text-black">Сортировать по</label>
                         <select name="sort_by" class="form-select">
-                            <option value="popularity" {% if selected_sort == 'popularity' %}selected{% endif %}>{% trans "Популярности" %}</option>
-                            <option value="date" {% if selected_sort == 'date' %}selected{% endif %}>{% trans "Дате создания" %}</option>
+                            <option value="popularity" selected>Популярности</option>
+                            <option value="date" >Дате создания</option>
                         </select>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label text-black">{% trans "Категория" %}</label>
+                        <label class="form-label text-black">Категория</label>
                         <select name="category" class="form-select">
-                            <option value="">{% trans "Все категории" %}</option>
-                            <option value="gameplay" {% if selected_category == 'gameplay' %}selected{% endif %}>{% trans "Улучшенный геймплей" %}</option>
-                            <option value="lights" {% if selected_category == 'lights' %}selected{% endif %}>{% trans "Световые приборы" %}</option>
+                            <option value="">Все категории</option>
+                            <option value="gameplay" selected>Улучшенный геймплей</option>
+                            <option value="lights">Световые приборы</option>
                         </select>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100">{% trans "Применить" %}</button>
-                    {% if selected_sort or selected_category or search_query %}
-                        <a href="?" class="btn btn-outline-secondary w-100 mt-2">{% trans "Сбросить фильтры" %}</a>
-                    {% endif %}
+                    <button type="submit" class="btn btn-primary w-100">Применить</button>
                 </form>
             </div>
         </div>
     </div>
     {% include 'main/paginator.html' %}
 </div>
-{% block scripts %}
 <script src="{% static 'main/js/more_button.js' %}"></script>
-{% endblock %}
-{% endblock %}
 
 
 
