--- a/templates/all_mods.html
+++ b/templates/all_mods.html
@@ -1,13 +1,55 @@
+<!doctype html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="text/css" href="{%  static 'main/css/base.css'%}" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <title>Главная</title>
+    <link type="text/css" href="static/css/index.css" rel="stylesheet" />
+    <link type="text/css" href="static/css/base.css" rel="stylesheet" />
+    <link type="text/css" href="static/css/about.css" rel="stylesheet" />
+    <link type="text/css" href="static/css/paginator.css" rel="stylesheet" />
+  </head>
+  <body>
+  <header id="main-header">
+      <div class="row align-items-center">
+        <div class="col-auto">
+          <div id="logo">Company</div>
+        </div>
+        <div id="main-nav" class="col">
+          <!-- Кнопка бургер-меню (видна только на мобильных) -->
+          <button id="mobile-menu-button" class="ms-auto d-md-none btn p-0" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#e6dfdf" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+            </svg>
+          </button>
 
-<link type="text/css" href="{% static 'main/css/main.css'%}" rel="stylesheet" />
-<link type="text/css" href="{% static 'main/css/base.css'%}" rel="stylesheet" />
-<link type="text/css" href="{% static 'main/css/all_mods.css'%}" rel="stylesheet"/>
-<link type="text/css" href="{% static 'main/css/paginator.css'%}" rel="stylesheet"/>
+          <!-- Основное меню (скрыто на мобильных) -->
+          <ul id="nav-list" class="d-none d-md-flex">
+            <li><a class="nav-li-item" href="index.html">ГЛАВНАЯ</a></li>
+            <li><a class="nav-li-item" href="templates/all_mods.html">ВСЕ МОДЫ</a></li>
+            <li><a class="nav-li-item" href="templates/all_news.html">НОВОСТИ</a></li>
+            <!--<li><a href="{% if LANGUAGE_CODE == 'en' %}/ru/{{ request.path|get_path_part:1 }}/{% else %}/en/{{ request.path|get_path_part:1 }}/{% endif %}" id="lang-button-1">ПЕРЕВОД</a></li>-->
+          </ul>
+        </div>
+      </div>
+
+      <!-- Мобильное меню (появляется при клике) -->
+      <div id="mobile-menu" class="d-md-none">
+        <ul>
+            <li><a class="nav-li-item" href="index.html">ГЛАВНАЯ</a></li>
+            <li><a class="nav-li-item" href="templates/all_mods.html">ВСЕ МОДЫ</a></li>
+            <li><a class="nav-li-item" href="templates/all_news.html">НОВОСТИ</a></li>
+            <!--<li><a href="{% if LANGUAGE_CODE == 'en' %}/ru/{{ request.path|get_path_part:1 }}/{% else %}/en/{{ request.path|get_path_part:1 }}/{% endif %}" id="lang-button-1">ПЕРЕВОД</a></li>-->
+        </ul>
+      </div>
+    </header>
+<main>
 <br><br><br>
 <div class="container" style="max-width:1050px">
     <div class="row">
         <div class="col-md-8 order-md-1">
-            {% for mod in page_obj %}
             <div class="tariff-plans">
                 <div class="tariff-card-combined" style="max-width:800px;">
                     <div class="tariff-header image-zoom-container"
@@ -16,19 +58,48 @@
                                 background-position: center;
                                 transition: transform 0.5s ease;
                                 overflow: hidden;">
-                        <h2>{{ mod.title }}</h2>
+                        <h2>Админ Радар</h2>
                     </div>
                     <div class="tariff-body">
-                        <p class="hero-text full-text" style="text-align: left; display: none;">{{ mod.content }}</p>
-                        <p class="hero-text short-text" style="text-align: left;">{{ mod.content|truncatechars:200 }}</p>
-                        {% if mod.content|length > 200 %}
+                        <p class="hero-text full-text" style="text-align: left; display: none;">Спасибо вам за вашу заботу, вы прекрасно справляетесь. Это очень распространенное чувство самоуничижения. Слишком. С домиками-компаньонами и большими пуш-маунтинами на свет появится забавный мышонок. Мне все равно, я не хочу, я не хочу, мне все равно. Я не хотел слишком многого. Не бойся, будь осторожен, будь осторожен. В конце концов, Рон, у тебя же будет завал, верно? Называются "Футбольная нога" и "футбольный мяч для ног". Полная клавиатура. Дафна. Единственный живой элемент в истории. Подростки на телевидении. Я фанат lion, портфолио, карьера, подросток и, например, карьера. Я уже была там раньше, Дейзи, Даниэль, я хочу пойти, я хочу отдохнуть. Лаванда проживет еще несколько лет. Весь макияж. Прическа. У вас нет достойной компенсации. Вы не медицинская сестра. Для моих двоих. Также ручная работа. Домашний соус, керамические сувениры, салат-гриль в мультиварке, салат с морковью и макаронами, но не алкоголь. Больше одной минуты, домашняя подушка или подушка для подростка, удостоверение личности бюро, lorem. Я не испытываю отвращения к этому, но время от времени испытываю отвращение. К сожалению, жизнь с ядовитыми челюстями. Я хотел, чтобы впереди был ноль. Также важно начать свой собственный клинический туризм. Дэниел Ли. Однако мониторинг - это важный способ управления информацией. К сожалению, участники с большими стрелками. Но именно поэтому, собственная питьевая зона Лео, хочет пройти курс прямо сейчас
                         <span class="show-more text-black" onclick="toggleText(this)">read more</span>
-                        {% endif %}
                     </div>
                 </div>
             </div>
             <br>
-            {% endfor %}
+            <div class="tariff-plans">
+                <div class="tariff-card-combined" style="max-width:800px;">
+                    <div class="tariff-header image-zoom-container"
+                         style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('{{ mod.image.url }}');
+                                background-size: cover;
+                                background-position: center;
+                                transition: transform 0.5s ease;
+                                overflow: hidden;">
+                        <h2>Стробоскопы</h2>
+                    </div>
+                    <div class="tariff-body">
+                        <p class="hero-text full-text" style="text-align: left; display: none;">Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу. Взобравшись на первую вершину курсивных гор, бросил он последний взгляд назад, на силуэт своего родного города Буквоград, на заголовок деревни Алфавит и на подзаголовок своего переулка Строчка. Грустный реторический вопрос скатился по его щеке и он продолжил свой путь. По дороге встретил текст рукопись. Она предупредила его: «В моей стране все переписывается по несколько раз. Единственное, что от меня осталось, это приставка «и». Возвращайся ты лучше в свою безопасную страну».
+                        <span class="show-more text-black" onclick="toggleText(this)">read more</span>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="tariff-plans">
+                <div class="tariff-card-combined" style="max-width:800px;">
+                    <div class="tariff-header image-zoom-container"
+                         style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('{{ mod.image.url }}');
+                                background-size: cover;
+                                background-position: center;
+                                transition: transform 0.5s ease;
+                                overflow: hidden;">
+                        <h2>No Damage</h2>
+                    </div>
+                    <div class="tariff-body">
+                        <p class="hero-text full-text" style="text-align: left; display: none;">Версия QWERTY: 1.51 Протестирована с наивысшим приоритетом и работает на 100%. Использование с наивысшим приоритетом с другими модами Устраняет 100% повреждений груза, вызванных столкновениями грузовиков и прицепов и авариями, обычными повреждениями, вызванными износом. Мод остается бесплатным для редактирования и обмена, если вам понравился этот мод, отсортируйте его, чтобы постоянно обновлять Спасибо и хорошо повеселиться!</p>
+                        <span class="show-more text-black" onclick="toggleText(this)">read more</span>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Блок фильтров (4 колонки) -->
@@ -62,9 +133,61 @@
     </div>
     {% include 'main/paginator.html' %}
 </div>
-<script src="{% static 'main/js/more_button.js' %}"></script>
 
 
+
+
+
+</main>
+<footer id="main-footer" style="background-color: var(--bg-dark);">
+    <div class="container">
+        <div class="row">
+            <!-- Первая колонка -->
+            <div class="col-md-4 mb-3">
+                <div class="fw-bold fs-5 mb-3" style="color: var(--text-main);">Company</div>
+                <p style="color: var(--text-secondary);">Надоело что админы могут следить за тобой, а ты за ними нет? Пора менять правила!</p>
+            </div>
+
+            <!-- Вторая колонка -->
+            <div class="col-md-4 mb-3">
+                <h5 class="mb-3" style="color: var(--text-main);">Навигация</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="/ru/main/" class="nav-link p-0" style="color: var(--text-secondary);">Главная</a></li>
+                    <li class="nav-item mb-2"><a href="/mods/" class="nav-link p-0" style="color: var(--text-secondary);">Все моды</a></li>
+                    <li class="nav-item mb-2"><a href="/news/" class="nav-link p-0" style="color: var(--text-secondary);">Новости</a></li>
+                </ul>
+            </div>
+
+            <!-- Третья колонка с соцсетями -->
+            <div class="col-md-4 mb-3">
+                <div style="display: flex; flex-direction: column; align-items: center;">
+                    <h5 class="mb-3" style="color: var(--text-main);">Соцсети</h5>
+                    <div class="d-flex justify-content-center gap-3">
+                        <a href="https://www.youtube.com/@Admin_RadarTMP" class="social-link">
+                            <img src="images/youtube.ico" alt="YouTube" class="social-icon" style="width: 32px; height: 32px;">
+                        </a>
+                        <a href="https://t.me/Radar_TMP" class="social-link">
+                            <img src="images/telegram.ico" alt="Telegram" class="social-icon" style="width: 32px; height: 32px;">
+                        </a>
+                        <a href="https://discord.gg/4urENWPF" class="social-link">
+                            <img src="images/discord.ico" alt="Discord" class="social-icon" style="width: 32px; height: 32px;">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="border-top pt-3 text-center" style="border-color: var(--border-dark) !important;">
+            <h3 style="color: var(--text-secondary); margin: 0;">&copy; Company. Все права защищены</h3>
+        </div>
+    </div>
+</footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+  <script src="static/js/burger_button.js"></script>
+  <script src="static/js/more_about_button.js"></script>
+  <script src="{% static 'main/js/more_button.js' %}"></script>
+  </body>
+</html>
 
 
 
