--- a/templates/all_mods.html
+++ b/templates/all_mods.html
@@ -8,7 +8,8 @@
     <title>Главная</title>
     <link type="text/css" href="static/css/index.css" rel="stylesheet" />
     <link type="text/css" href="static/css/base.css" rel="stylesheet" />
-    <link type="text/css" href="static/css/about.css" rel="stylesheet" />
+    <link type="text/css" href="static/css/all_mods.css" rel="stylesheet" />
+    <link type="text/css" href="static/css/all_news.css" rel="stylesheet" />
     <link type="text/css" href="static/css/paginator.css" rel="stylesheet" />
   </head>
   <body>
@@ -164,13 +165,13 @@
                     <h5 class="mb-3" style="color: var(--text-main);">Соцсети</h5>
                     <div class="d-flex justify-content-center gap-3">
                         <a href="https://www.youtube.com/@Admin_RadarTMP" class="social-link">
-                            <img src="images/youtube.ico" alt="YouTube" class="social-icon" style="width: 32px; height: 32px;">
+                            <img src="static/images/youtube.ico" alt="YouTube" class="social-icon" style="width: 32px; height: 32px;">
                         </a>
                         <a href="https://t.me/Radar_TMP" class="social-link">
-                            <img src="images/telegram.ico" alt="Telegram" class="social-icon" style="width: 32px; height: 32px;">
+                            <img src="static/images/telegram.ico" alt="Telegram" class="social-icon" style="width: 32px; height: 32px;">
                         </a>
                         <a href="https://discord.gg/4urENWPF" class="social-link">
-                            <img src="images/discord.ico" alt="Discord" class="social-icon" style="width: 32px; height: 32px;">
+                            <img src="static/images/discord.ico" alt="Discord" class="social-icon" style="width: 32px; height: 32px;">
                         </a>
                     </div>
                 </div>
@@ -185,7 +186,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   <script src="static/js/burger_button.js"></script>
   <script src="static/js/more_about_button.js"></script>
-  <script src="{% static 'main/js/more_button.js' %}"></script>
+  <script src="static 'main/js/more_button.js"></script>
   </body>
 </html>
 
