--- a/templates/all_mods.html
+++ b/templates/all_mods.html
@@ -9,7 +9,6 @@
     <link type="text/css" href="static/css/index.css" rel="stylesheet" />
     <link type="text/css" href="static/css/base.css" rel="stylesheet" />
     <link type="text/css" href="static/css/all_mods.css" rel="stylesheet" />
-    <link type="text/css" href="static/css/all_news.css" rel="stylesheet" />
     <link type="text/css" href="static/css/paginator.css" rel="stylesheet" />
   </head>
   <body>
@@ -132,7 +131,15 @@
             </div>
         </div>
     </div>
-    {% include 'main/paginator.html' %}
+        <div class="circle-pagination">
+                <span class="circle-pagination__item circle-pagination__item--disabled">&lt;</span>
+                <span class="circle-pagination__item circle-pagination__item--active">1</span>
+                <span class="circle-pagination__item circle-pagination__item--active">2</span>
+                <span class="circle-pagination__item circle-pagination__item--active">3</span>
+                <span class="circle-pagination__item circle-pagination__item--active">4</span>
+                <span class="circle-pagination__item circle-pagination__item--active">5</span>
+                <a class="circle-pagination__item" href="#">&gt;</a>
+        </div>  
 </div>
 
 
@@ -153,9 +160,9 @@
             <div class="col-md-4 mb-3">
                 <h5 class="mb-3" style="color: var(--text-main);">Навигация</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="/ru/main/" class="nav-link p-0" style="color: var(--text-secondary);">Главная</a></li>
-                    <li class="nav-item mb-2"><a href="/mods/" class="nav-link p-0" style="color: var(--text-secondary);">Все моды</a></li>
-                    <li class="nav-item mb-2"><a href="/news/" class="nav-link p-0" style="color: var(--text-secondary);">Новости</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: var(--text-secondary);">Главная</a></li>
+                    <li class="nav-item mb-2"><a href="static/images/all_mods.html" class="nav-link p-0" style="color: var(--text-secondary);">Все моды</a></li>
+                    <li class="nav-item mb-2"><a href="static/images/all_news.html" class="nav-link p-0" style="color: var(--text-secondary);">Новости</a></li>
                 </ul>
             </div>
 
