--- a/templates/all_news.html
+++ b/templates/all_news.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link type="text/css" href="{%  static 'main/css/base.css'%}" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <title>Главная</title>
-    <link type="text/css" href="static/css/index.css" rel="stylesheet" />
-    <link type="text/css" href="static/css/base.css" rel="stylesheet" />
-    <link type="text/css" href="static/css/all_mods.css" rel="stylesheet" />
-    <link type="text/css" href="static/css/paginator.css" rel="stylesheet" />
+    <link type="text/css" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/css/index.css" rel="stylesheet" />
+    <link type="text/css" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/css/base.css" rel="stylesheet" />
+    <link type="text/css" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/css/about.css" rel="stylesheet" />
+    <link type="text/css" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/css/paginator.css" rel="stylesheet" />
   </head>
   <body>
   <header id="main-header">
@@ -27,9 +26,9 @@
 
           <!-- Основное меню (скрыто на мобильных) -->
           <ul id="nav-list" class="d-none d-md-flex">
-            <li><a class="nav-li-item" href="index.html">ГЛАВНАЯ</a></li>
-            <li><a class="nav-li-item" href="templates/all_mods.html">ВСЕ МОДЫ</a></li>
-            <li><a class="nav-li-item" href="templates/all_news.html">НОВОСТИ</a></li>
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/">ГЛАВНАЯ</a></li>
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_mods.html">ВСЕ МОДЫ</a></li>
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html">НОВОСТИ</a></li>
             <!--<li><a href="{% if LANGUAGE_CODE == 'en' %}/ru/{{ request.path|get_path_part:1 }}/{% else %}/en/{{ request.path|get_path_part:1 }}/{% endif %}" id="lang-button-1">ПЕРЕВОД</a></li>-->
           </ul>
         </div>
@@ -38,9 +37,9 @@
       <!-- Мобильное меню (появляется при клике) -->
       <div id="mobile-menu" class="d-md-none">
         <ul>
-            <li><a class="nav-li-item" href="index.html">ГЛАВНАЯ</a></li>
-            <li><a class="nav-li-item" href="templates/all_mods.html">ВСЕ МОДЫ</a></li>
-            <li><a class="nav-li-item" href="templates/all_news.html">НОВОСТИ</a></li>
+            <li><a class="nav-li-item" href="#">ГЛАВНАЯ</a></li>
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_mods.html">ВСЕ МОДЫ</a></li>
+            <li><a class="nav-li-item" href="https://sudo-ascend.github.io/truckersmp-mods.github.io/templates/all_news.html">НОВОСТИ</a></li>
             <!--<li><a href="{% if LANGUAGE_CODE == 'en' %}/ru/{{ request.path|get_path_part:1 }}/{% else %}/en/{{ request.path|get_path_part:1 }}/{% endif %}" id="lang-button-1">ПЕРЕВОД</a></li>-->
         </ul>
       </div>
@@ -187,9 +186,9 @@
             <div class="col-md-4 mb-3">
                 <h5 class="mb-3" style="color: var(--text-main);">Навигация</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0" style="color: var(--text-secondary);">Главная</a></li>
-                    <li class="nav-item mb-2"><a href="static/images/all_mods.html" class="nav-link p-0" style="color: var(--text-secondary);">Все моды</a></li>
-                    <li class="nav-item mb-2"><a href="static/images/all_news.html" class="nav-link p-0" style="color: var(--text-secondary);">Новости</a></li>
+                    <li class="nav-item mb-2"><a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/" class="nav-link p-0" style="color: var(--text-secondary);">Главная</a></li>
+                    <li class="nav-item mb-2"><a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/all_mods.html" class="nav-link p-0" style="color: var(--text-secondary);">Все моды</a></li>
+                    <li class="nav-item mb-2"><a href="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/all_news.html" class="nav-link p-0" style="color: var(--text-secondary);">Новости</a></li>
                 </ul>
             </div>
 
@@ -218,9 +217,9 @@
     </div>
 </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-  <script src="static/js/burger_button.js"></script>
-  <script src="static/js/more_about_button.js"></script>
-  <script src="static 'main/js/more_button.js"></script>
+  <script src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/js/burger_button.js"></script>
+  <script src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/js/more_about_button.js"></script>
+  <script src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static 'main/js/more_button.js"></script>
   </body>
 </html>
 
