--- a/templates/all_mods.html
+++ b/templates/all_mods.html
@@ -132,11 +132,11 @@
     </div>
         <div class="circle-pagination">
                 <span class="circle-pagination__item circle-pagination__item--disabled">&lt;</span>
-                <span class="circle-pagination__item circle-pagination__item--active">1</span>
-                <span class="circle-pagination__item circle-pagination__item--active">2</span>
-                <span class="circle-pagination__item circle-pagination__item--active">3</span>
-                <span class="circle-pagination__item circle-pagination__item--active">4</span>
-                <span class="circle-pagination__item circle-pagination__item--active">5</span>
+                <span class="circle-pagination__item">1</span>
+                <span class="circle-pagination__item">2</span>
+                <span class="circle-pagination__item">3</span>
+                <span class="circle-pagination__item">4</span>
+                <span class="circle-pagination__item">5</span>
                 <a class="circle-pagination__item" href="#">&gt;</a>
         </div>  
 </div>
@@ -171,13 +171,13 @@
                     <h5 class="mb-3" style="color: var(--text-main);">Соцсети</h5>
                     <div class="d-flex justify-content-center gap-3">
                         <a href="https://www.youtube.com/@Admin_RadarTMP" class="social-link">
-                            <img src="static/images/youtube.ico" alt="YouTube" class="social-icon" style="width: 32px; height: 32px;">
+                            <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/youtube.ico" alt="YouTube" class="social-icon" style="width: 32px; height: 32px;">
                         </a>
                         <a href="https://t.me/Radar_TMP" class="social-link">
-                            <img src="static/images/telegram.ico" alt="Telegram" class="social-icon" style="width: 32px; height: 32px;">
+                            <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/telegram.ico" alt="Telegram" class="social-icon" style="width: 32px; height: 32px;">
                         </a>
                         <a href="https://discord.gg/4urENWPF" class="social-link">
-                            <img src="static/images/discord.ico" alt="Discord" class="social-icon" style="width: 32px; height: 32px;">
+                            <img src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/images/discord.ico" alt="Discord" class="social-icon" style="width: 32px; height: 32px;">
                         </a>
                     </div>
                 </div>
