--- a/templates/all_news.html
+++ b/templates/all_news.html
@@ -159,7 +159,7 @@
     </div>
         <div class="circle-pagination">
                 <span class="circle-pagination__item circle-pagination__item--disabled">&lt;</span>
-                <span class="circle-pagination__item">1</span>
+                <span class="circle-pagination__item circle-pagination__item--active">1</span>
                 <span class="circle-pagination__item">2</span>
                 <span class="circle-pagination__item">3</span>
                 <span class="circle-pagination__item">4</span>
