--- a/templates/all_mods.html
+++ b/templates/all_mods.html
@@ -52,7 +52,7 @@
             <div class="tariff-plans">
                 <div class="tariff-card-combined" style="max-width:800px;">
                     <div class="tariff-header image-zoom-container"
-                         style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('{{ mod.image.url }}');
+                         style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('https://sudo-ascend.github.io/truckersmp-mods.github.io/media/images/Admin_Radar.jpg');
                                 background-size: cover;
                                 background-position: center;
                                 transition: transform 0.5s ease;
@@ -69,7 +69,7 @@
             <div class="tariff-plans">
                 <div class="tariff-card-combined" style="max-width:800px;">
                     <div class="tariff-header image-zoom-container"
-                         style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('{{ mod.image.url }}');
+                         style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('https://sudo-ascend.github.io/truckersmp-mods.github.io/media/images/Strobe_lights.jpg');
                                 background-size: cover;
                                 background-position: center;
                                 transition: transform 0.5s ease;
@@ -86,7 +86,7 @@
             <div class="tariff-plans">
                 <div class="tariff-card-combined" style="max-width:800px;">
                     <div class="tariff-header image-zoom-container"
-                         style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('{{ mod.image.url }}');
+                         style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('https://sudo-ascend.github.io/truckersmp-mods.github.io/media/images/No_damage.jpg');
                                 background-size: cover;
                                 background-position: center;
                                 transition: transform 0.5s ease;
