--- a/templates/all_news.html
+++ b/templates/all_news.html
@@ -52,7 +52,7 @@
             <div class="tariff-plans">
                 <div class="tariff-card-combined" style="max-width:800px;">
                     <div class="tariff-header image-zoom-container"
-                         style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('{{ mod.image.url }}');
+                         style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('https://sudo-ascend.github.io/truckersmp-mods.github.io/media/images/Update_1.8.jpg');
                                 background-size: cover;
                                 background-position: center;
                                 transition: transform 0.5s ease;
@@ -75,7 +75,7 @@
             <div class="tariff-plans">
                 <div class="tariff-card-combined" style="max-width:800px;">
                     <div class="tariff-header image-zoom-container"
-                         style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('{{ mod.image.url }}');
+                         style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('https://sudo-ascend.github.io/truckersmp-mods.github.io/media/images/New_Round.jpg');
                                 background-size: cover;
                                 background-position: center;
                                 transition: transform 0.5s ease;
@@ -95,7 +95,7 @@
             <div class="tariff-plans">
                 <div class="tariff-card-combined" style="max-width:800px;">
                     <div class="tariff-header image-zoom-container"
-                         style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('{{ mod.image.url }}');
+                         style="background-image: linear-gradient(to bottom, transparent, 65%, black), url('https://sudo-ascend.github.io/truckersmp-mods.github.io/media/images/New_Keybind_Manager.jpg');
                                 background-size: cover;
                                 background-position: center;
                                 transition: transform 0.5s ease;
