--- a/templates/all_news.html
+++ b/templates/all_news.html
@@ -135,7 +135,7 @@
                 <form method="get" action="">
                     <div class="mb-3">
                         <label class="form-label text-black">Поиск</label>
-                        <input type="text" name="search" class="form-control" placeholder="{% trans 'Введите запрос...' %}" value="{{ search_query }}">
+                        <input type="text" name="search" class="form-control" placeholder="Введите запрос..." value="search_query">
                     </div>
                     <div class="mb-3">
                         <label class="form-label text-black">Сортировать по</label>
