--- a/templates/all_news.html
+++ b/templates/all_news.html
@@ -60,14 +60,13 @@
                         <h2>Обновление 1.8</h2>
                     </div>
                     <div class="tariff-body">
-                        <p class="hero-text full-text" style="text-align: left; display: none;">Мы рады представить вам обновление 1.8, которое делает вашу работу ещё комфортнее! В этой версии мы сосредоточились на двух ключевых моментах:
+                        <p class="hero-text" style="text-align: left; display: none;">Мы рады представить вам обновление 1.8, которое делает вашу работу ещё комфортнее! В этой версии мы сосредоточились на двух ключевых моментах:
  
 Исправлены баги: Мы тщательно поработали над устранением ошибок, которые могли вызывать неудобства. Теперь система работает более стабильно и предсказуемо, без досадных сбоев.
  
 Улучшена скорость взаимодействия: Вы заметите, что многие действия стали выполняться значительно быстрее. Оптимизация позволила нам ускорить отклик интерфейса и общую производительность, делая вашу работу более плавной и эффективной.
 
 Мы постоянно работаем над улучшением нашего продукта, и это обновление — ещё один шаг к более совершенному пользовательскому опыту.
-                        <span class="show-more text-black" onclick="toggleText(this)">read more</span>
                     </div>
                 </div>
             </div>
@@ -83,11 +82,10 @@
                         <h2>Новый индикатор количества админов</h2>
                     </div>
                     <div class="tariff-body">
-                        <p class="hero-text full-text" style="text-align: left; display: none;">Красный цвет и число внутри: Вы находитесь в зоне видимости как минимум одного администратора. Число внутри кружка показывает, сколько именно администраторов в данный момент могут вас видеть.
+                        <p class="hero-text" style="text-align: left; display: none;">Красный цвет и число внутри: Вы находитесь в зоне видимости как минимум одного администратора. Число внутри кружка показывает, сколько именно администраторов в данный момент могут вас видеть.
 Будьте внимательны!
 
 Зеленый цвет: Вы не находитесь в зоне видимости ни одного администратора. Можете чувствовать себя свободнее.
-                        <span class="show-more text-black" onclick="toggleText(this)">read more</span>
                     </div>
                 </div>
             </div>
@@ -103,7 +101,7 @@
                         <h2>Новый Bind Manager</h2>
                     </div>
                     <div class="tariff-body">
-                        <p class="hero-text full-text" style="text-align: left; display: none;">Повышенная точность при каждом поиске
+                        <p class="hero-text" style="text-align: left; display: none;">Повышенная точность при каждом поиске
 
 Мы усовершенствовали наш алгоритм, чтобы выдавать точные результаты с релевантностью 98,7%.
 
@@ -122,7 +120,6 @@
 Совет профессионалам: используйте кавычки (" ") для точного совпадения фраз!
 
 (Идеально подходит для технических / научных пользователей, нуждающихся в сверхточном поиске данных)</p>
-                        <span class="show-more text-black" onclick="toggleText(this)">read more</span>
                     </div>
                 </div>
             </div>
