--- a/templates/all_mods.html
+++ b/templates/all_mods.html
@@ -60,7 +60,8 @@
                         <h2>Админ Радар</h2>
                     </div>
                     <div class="tariff-body">
-                        <p class="hero-text" style="text-align: left; display: none;">Спасибо вам за вашу заботу, вы прекрасно справляетесь. Это очень распространенное чувство самоуничижения. Слишком. С домиками-компаньонами и большими пуш-маунтинами на свет появится забавный мышонок. Мне все равно, я не хочу, я не хочу, мне все равно. Я не хотел слишком многого. Не бойся, будь осторожен, будь осторожен. В конце концов, Рон, у тебя же будет завал, верно? Называются "Футбольная нога" и "футбольный мяч для ног". Полная клавиатура. Дафна. Единственный живой элемент в истории. Подростки на телевидении. Я фанат lion, портфолио, карьера, подросток и, например, карьера. Я уже была там раньше, Дейзи, Даниэль, я хочу пойти, я хочу отдохнуть. Лаванда проживет еще несколько лет. Весь макияж. Прическа. У вас нет достойной компенсации. Вы не медицинская сестра. Для моих двоих. Также ручная работа. Домашний соус, керамические сувениры, салат-гриль в мультиварке, салат с морковью и макаронами, но не алкоголь. Больше одной минуты, домашняя подушка или подушка для подростка, удостоверение личности бюро, lorem. Я не испытываю отвращения к этому, но время от времени испытываю отвращение. К сожалению, жизнь с ядовитыми челюстями. Я хотел, чтобы впереди был ноль. Также важно начать свой собственный клинический туризм. Дэниел Ли. Однако мониторинг - это важный способ управления информацией. К сожалению, участники с большими стрелками. Но именно поэтому, собственная питьевая зона Лео, хочет пройти курс прямо сейчас
+                        <p class="hero-text" style="text-align: left;">Спасибо вам за вашу заботу, вы прекрасно справляетесь. Это очень распространенное чувство самоуничижения. Слишком. С домиками-компаньонами и большими пуш-маунтинами на свет появится забавный мышонок. Мне все равно, я не хочу, я не хочу, мне все равно. Я не хотел слишком многого. Не бойся, будь осторожен, будь осторожен. В конце концов, Рон, у тебя же будет завал, верно? Называются "Футбольная нога" и "футбольный мяч для ног". Полная клавиатура. Дафна. Единственный живой элемент в истории. Подростки на телевидении. Я фанат lion, портфолио, карьера, подросток и, например, карьера. Я уже была там раньше, Дейзи, Даниэль, я хочу пойти, я хочу отдохнуть. Лаванда проживет еще несколько лет. Весь макияж. Прическа. У вас нет достойной компенсации. Вы не медицинская сестра. Для моих двоих. Также ручная работа. Домашний соус, керамические сувениры, салат-гриль в мультиварке, салат с морковью и макаронами, но не алкоголь. Больше одной минуты, домашняя подушка или подушка для подростка, удостоверение личности бюро, lorem. Я не испытываю отвращения к этому, но время от времени испытываю отвращение. К сожалению, жизнь с ядовитыми челюстями. Я хотел, чтобы впереди был ноль. Также важно начать свой собственный клинический туризм. Дэниел Ли. Однако мониторинг - это важный способ управления информацией. К сожалению, участники с большими стрелками. Но именно поэтому, собственная питьевая зона Лео, хочет пройти курс прямо сейчас
+                        <span class="show-more text-black" onclick="toggleText(this)">read more</span>
                     </div>
                 </div>
             </div>
@@ -76,7 +77,8 @@
                         <h2>Стробоскопы</h2>
                     </div>
                     <div class="tariff-body">
-                        <p class="hero-text" style="text-align: left; display: none;">Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу. Взобравшись на первую вершину курсивных гор, бросил он последний взгляд назад, на силуэт своего родного города Буквоград, на заголовок деревни Алфавит и на подзаголовок своего переулка Строчка. Грустный реторический вопрос скатился по его щеке и он продолжил свой путь. По дороге встретил текст рукопись. Она предупредила его: «В моей стране все переписывается по несколько раз. Единственное, что от меня осталось, это приставка «и». Возвращайся ты лучше в свою безопасную страну».
+                        <p> class="hero-text" style="text-align: left;">Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу. Взобравшись на первую вершину курсивных гор, бросил он последний взгляд назад, на силуэт своего родного города Буквоград, на заголовок деревни Алфавит и на подзаголовок своего переулка Строчка. Грустный реторический вопрос скатился по его щеке и он продолжил свой путь. По дороге встретил текст рукопись. Она предупредила его: «В моей стране все переписывается по несколько раз. Единственное, что от меня осталось, это приставка «и». Возвращайся ты лучше в свою безопасную страну».</p>
+                            <span class="show-more text-black" onclick="toggleText(this)">read more</span>
                     </div>
                 </div>
             </div>
@@ -92,7 +94,8 @@
                         <h2>No Damage</h2>
                     </div>
                     <div class="tariff-body">
-                        <p class="hero-text" style="text-align: left; display: none;">Версия QWERTY: 1.51 Протестирована с наивысшим приоритетом и работает на 100%. Использование с наивысшим приоритетом с другими модами Устраняет 100% повреждений груза, вызванных столкновениями грузовиков и прицепов и авариями, обычными повреждениями, вызванными износом. Мод остается бесплатным для редактирования и обмена, если вам понравился этот мод, отсортируйте его, чтобы постоянно обновлять Спасибо и хорошо повеселиться!</p>
+                        <p class="hero-text" style="text-align: left;">Версия QWERTY: 1.51 Протестирована с наивысшим приоритетом и работает на 100%. Использование с наивысшим приоритетом с другими модами Устраняет 100% повреждений груза, вызванных столкновениями грузовиков и прицепов и авариями, обычными повреждениями, вызванными износом. Мод остается бесплатным для редактирования и обмена, если вам понравился этот мод, отсортируйте его, чтобы постоянно обновлять Спасибо и хорошо повеселиться!</p>
+                        <span class="show-more text-black" onclick="toggleText(this)">read more</span>
                     </div>
                 </div>
             </div>
@@ -188,8 +191,7 @@
 </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   <script src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/js/burger_button.js"></script>
-  <script src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/js/more_about_button.js"></script>
-  <script src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static 'main/js/more_button.js"></script>
+      <script src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/js/more_button.js"></script>
   </body>
 </html>
 
