--- a/templates/all_news.html
+++ b/templates/all_news.html
@@ -60,13 +60,14 @@
                         <h2>Обновление 1.8</h2>
                     </div>
                     <div class="tariff-body">
-                        <p class="hero-text" style="text-align: left; display: none;">Мы рады представить вам обновление 1.8, которое делает вашу работу ещё комфортнее! В этой версии мы сосредоточились на двух ключевых моментах:
+                        <p class="hero-text" style="text-align: left;">Мы рады представить вам обновление 1.8, которое делает вашу работу ещё комфортнее! В этой версии мы сосредоточились на двух ключевых моментах:
  
 Исправлены баги: Мы тщательно поработали над устранением ошибок, которые могли вызывать неудобства. Теперь система работает более стабильно и предсказуемо, без досадных сбоев.
  
 Улучшена скорость взаимодействия: Вы заметите, что многие действия стали выполняться значительно быстрее. Оптимизация позволила нам ускорить отклик интерфейса и общую производительность, делая вашу работу более плавной и эффективной.
 
-Мы постоянно работаем над улучшением нашего продукта, и это обновление — ещё один шаг к более совершенному пользовательскому опыту.
+Мы постоянно работаем над улучшением нашего продукта, и это обновление — ещё один шаг к более совершенному пользовательскому опыту.</p>
+<span class="show-more text-black" onclick="toggleText(this)">read more</span>
                     </div>
                 </div>
             </div>
@@ -82,10 +83,11 @@
                         <h2>Новый индикатор количества админов</h2>
                     </div>
                     <div class="tariff-body">
-                        <p class="hero-text" style="text-align: left; display: none;">Красный цвет и число внутри: Вы находитесь в зоне видимости как минимум одного администратора. Число внутри кружка показывает, сколько именно администраторов в данный момент могут вас видеть.
+                        <p class="hero-text" style="text-align: left;">Красный цвет и число внутри: Вы находитесь в зоне видимости как минимум одного администратора. Число внутри кружка показывает, сколько именно администраторов в данный момент могут вас видеть.
 Будьте внимательны!
 
-Зеленый цвет: Вы не находитесь в зоне видимости ни одного администратора. Можете чувствовать себя свободнее.
+Зеленый цвет: Вы не находитесь в зоне видимости ни одного администратора. Можете чувствовать себя свободнее.</p>
+<span class="show-more text-black" onclick="toggleText(this)">read more</span>
                     </div>
                 </div>
             </div>
@@ -101,7 +103,7 @@
                         <h2>Новый Bind Manager</h2>
                     </div>
                     <div class="tariff-body">
-                        <p class="hero-text" style="text-align: left; display: none;">Повышенная точность при каждом поиске
+                        <p class="hero-text" style="text-align: left;">Повышенная точность при каждом поиске
 
 Мы усовершенствовали наш алгоритм, чтобы выдавать точные результаты с релевантностью 98,7%.
 
@@ -120,6 +122,7 @@
 Совет профессионалам: используйте кавычки (" ") для точного совпадения фраз!
 
 (Идеально подходит для технических / научных пользователей, нуждающихся в сверхточном поиске данных)</p>
+<span class="show-more text-black" onclick="toggleText(this)">read more</span>
                     </div>
                 </div>
             </div>
@@ -215,7 +218,8 @@
 </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   <script src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/js/burger_button.js"></script>
-  <script src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/js/more_about_button.js"></script>
+    <script src="https://sudo-ascend.github.io/truckersmp-mods.github.io/static/js/more_button.js"></script>
+
   </body>
 </html>
 
