--- a/templates/all_news.html
+++ b/templates/all_news.html
@@ -62,11 +62,7 @@
                     <div class="tariff-body">
                         <p class="hero-text" style="text-align: left;">Мы рады представить вам обновление 1.8, которое делает вашу работу ещё комфортнее! В этой версии мы сосредоточились на двух ключевых моментах:
  
-Исправлены баги: Мы тщательно поработали над устранением ошибок, которые могли вызывать неудобства. Теперь система работает более стабильно и предсказуемо, без досадных сбоев.
- 
-Улучшена скорость взаимодействия: Вы заметите, что многие действия стали выполняться значительно быстрее. Оптимизация позволила нам ускорить отклик интерфейса и общую производительность, делая вашу работу более плавной и эффективной.
-
-Мы постоянно работаем над улучшением нашего продукта, и это обновление — ещё один шаг к более совершенному пользовательскому опыту.</p>
+Исправлены баги: Мы тщательно поработали над устранением ошибок, которые могли вызывать неудобства. Теперь система работает более стабильно и предсказуемо, без досадных сбоев.</p>
 <span class="show-more text-black" onclick="toggleText(this)">read more</span>
                     </div>
                 </div>
@@ -112,16 +108,7 @@
 ✓ Контекстно-зависимая сортировка определяет приоритетность того, что важно
 ✓ Устранение опечаток позволяет понять ваши намерения
 ✓ Поддержка нескольких языков для многоязычных запросов
-
-Проверьте это прямо сейчас – поиск действительно принесет вам удовольствие. Вы получите точные результаты всего в один клик!
-
-Это часть нашего обновления точности версии 3.2.0.
-
-(299 символов с пробелами)
-
-Совет профессионалам: используйте кавычки (" ") для точного совпадения фраз!
-
-(Идеально подходит для технических / научных пользователей, нуждающихся в сверхточном поиске данных)</p>
+</p>
 <span class="show-more text-black" onclick="toggleText(this)">read more</span>
                     </div>
                 </div>
