--- a/templates/all_mods.html
+++ b/templates/all_mods.html
@@ -77,7 +77,7 @@
                         <h2>Стробоскопы</h2>
                     </div>
                     <div class="tariff-body">
-                        <p> class="hero-text" style="text-align: left;">Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу. Взобравшись на первую вершину курсивных гор, бросил он последний взгляд назад, на силуэт своего родного города Буквоград, на заголовок деревни Алфавит и на подзаголовок своего переулка Строчка. Грустный реторический вопрос скатился по его щеке и он продолжил свой путь. По дороге встретил текст рукопись.</p>
+                        <p class="hero-text" style="text-align: left;">Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу. Взобравшись на первую вершину курсивных гор, бросил он последний взгляд назад, на силуэт своего родного города Буквоград, на заголовок деревни Алфавит и на подзаголовок своего переулка Строчка. Грустный реторический вопрос скатился по его щеке и он продолжил свой путь. По дороге встретил текст рукопись.</p>
                             <span class="show-more text-black" onclick="toggleText(this)">read more</span>
                     </div>
                 </div>
